tar (1.29-2) unstable; urgency=medium

  * re-enable parallel builds and increase build verbosity, closes: #824631

 -- Bdale Garbee <bdale@gag.com>  Tue, 31 May 2016 11:55:12 -0600

tar (1.29-1) unstable; urgency=medium

  * new upstream version, closes: #816072

 -- Bdale Garbee <bdale@gag.com>  Tue, 17 May 2016 12:37:57 -0600

tar (1.28-2) unstable; urgency=low

  * patch from upstream to fix --files-from and recursive extract,
    closes: #800380

 -- Bdale Garbee <bdale@gag.com>  Mon, 28 Sep 2015 15:39:02 -0600

tar (1.28-1) unstable; urgency=low

  * new upstream version
  * patch from Reiner Herrman that sets timestamp in generated manpage to 
    latest changelog date to make building the package reproducible, 
    closes: #774463
  * patch from Lunar adding --clamp-mtime option for reproducible builds,
    closes: #790415

 -- Bdale Garbee <bdale@gag.com>  Sun, 23 Aug 2015 19:56:52 +0200

tar (1.27.1-2) unstable; urgency=low

  * patch from David Gilman adds watch file with signature verification, 
    closes: #742351
  * patch from David Gilman fixes problem with multi-line descriptions,
    closes: #593149

 -- Bdale Garbee <bdale@gag.com>  Sat, 22 Mar 2014 15:55:03 -0600

tar (1.27.1-1) unstable; urgency=low

  * new upstream version

 -- Bdale Garbee <bdale@gag.com>  Mon, 03 Feb 2014 18:05:53 -0700

tar (1.27-4) unstable; urgency=low

  * add ACL, XATTR, and SELinux support by augmenting build-deps so the
    configure will find the right libraries, closes: #732071

 -- Bdale Garbee <bdale@gag.com>  Sat, 14 Dec 2013 10:05:08 -0700

tar (1.27-3) unstable; urgency=low

  * patch from Joey Hess to allow tar to replicate 1.26 output on behalf
    of pristine-tar, closes: #728025
  * honor DEB_BUILD_OPTIONS parallel=<n>, honor dpkg-buildflags in build
    target in addition to configure target, closes: #727196
  * lower mime priority to 1 so interactive packages using the default
    priority of 5 win, closes: #727303
