@@ -53,13 +53,12 @@ ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 endif
 endif
 
-	perl debian/tarman > debian/tar.1
 	touch build-stamp
 
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp configure-stamp debian/tar.1
+	rm -f build-stamp configure-stamp
 	[ ! -f Makefile ] || $(MAKE) distclean
 	dh_clean
 
@@ -95,7 +94,7 @@ binary-arch: build install
 	dh_installexamples
 	dh_installmenu
 	dh_installcron
-	dh_installman debian/tar.1 debian/rmt.8 debian/tarcat.1
+	dh_installman doc/tar.1 doc/rmt.8 debian/tarcat.1
 	mv debian/tar/usr/share/man/man8/rmt.8 \
 	   debian/tar/usr/share/man/man8/rmt-tar.8
 	dh_installinfo
